weather/devops/weather-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: weather.odin.thecodedom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weather-service
                port:
                  number: 80
  tls:
    - hosts:
        - weather.odin.thecodedom.com
      secretName: weather-tls
